# vicare_energy_api_lib

./: LICENSE  README.md  example.py  pyproject.toml
src/vicare_energy_api_lib/: auth.py
test/: test_auth.py
